[FIX] class details left spacing/guttter

--- a/generic/public/stylesheets/global.css
+++ b/generic/public/stylesheets/global.css
@@ -53,7 +53,7 @@ body.fixed-width{width:100%;}
 .left-block{width:240px;}
   /*Left Side Menu. term 'Sidebar' defaults for LEFT SIDEBAR/MENU*/
 #content p{font-size:13px; padding:.5em 0 .5em 0; margin: 0 0 14px 0;}
-#content-wrap{float:left; padding:0 0 0 30px; margin:20px 0 0 0; min-width:500px;}
+#content-wrap{float:left; padding:0 0 0 12px; margin:20px 0 0 0; min-width:500px;}
   /*Wraps the content section*/
 #fullpage{width:700px;}
 
